# NF4-Dequantize-Kernel

./: .gitignore  README.md  main.py  nf4_kernel  pyproject.toml
data/: param.txt
data/log/: log_cpp.txt  log_py.txt
kernel_test/: ALU_optim.cu  naive.cu  naive_v2.cu  shared_memory.cu  vector.cu
src/: benchmark.py  dq_nf4.py  generate_data.py  get_param.py  nf4_kernel.cu
